# CeskySyntax

./: .env.example  .gitignore  CMakeLists.txt  README.md  imgui.ini  temp_alias_test.cpp  temp_alias_test.csx
examples/: demo.csx  input-if-else.csx  smoke-current.csx
include/: CodeGenerator.h  Executor.h  Lexer.h  Translator.h
scripts/: build-transpiler.ps1  run-demo.ps1  smoke-test.cmd  smoke-test.ps1  translate-smoke.ps1
src/: CodeGenerator.cpp  Executor.cpp  ImGuiSimpleEditor.cpp  ImGuiSimpleEditor.h  Lexer.cpp  Translator.cpp  gui_editor.cpp  main.cpp  tui_editor.cpp
